// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login should dispatch login action on form submit 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="font-bold mt-9 text-3xl  text-center"
      data-testid="login-heading"
    >
      Login
    </h1>
    <form>
      <div>
        <label
          class="text-sm font-medium block text-slate-700"
          for="username"
        >
          Username
        </label>
        <div
          class="mt-1"
        >
          <input
            class="px-3 py-2 border bg-white shadow-sm border-slate-300 placeholder-slate-400 
 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 
 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1
 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
            data-testid="username"
            id="username"
            name="username"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="mt-6"
      >
        <label
          class="text-sm font-medium block text-slate-700"
          for="password"
        >
          Password
        </label>
        <div
          class="mt-1"
        >
          <input
            class="px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400
 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 
 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1 
 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
            data-testid="password"
            id="password"
            name="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="mt-6 text-center"
      >
        <button
          class="bg-sky-500 hover:bg-sky-700 px-5 py-2.5 text-sm leading-5 font-semibold rounded-md text-white"
          data-testid="submit"
          type="submit"
        >
          Login
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Login should handle username and password change 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="font-bold mt-9 text-3xl  text-center"
      data-testid="login-heading"
    >
      Login
    </h1>
    <form>
      <div>
        <label
          class="text-sm font-medium block text-slate-700"
          for="username"
        >
          Username
        </label>
        <div
          class="mt-1"
        >
          <input
            class="px-3 py-2 border bg-white shadow-sm border-slate-300 placeholder-slate-400 
 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 
 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1
 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
            data-testid="username"
            id="username"
            name="username"
            type="text"
            value="newUser"
          />
        </div>
      </div>
      <div
        class="mt-6"
      >
        <label
          class="text-sm font-medium block text-slate-700"
          for="password"
        >
          Password
        </label>
        <div
          class="mt-1"
        >
          <input
            class="px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400
 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 
 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1 
 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
            data-testid="password"
            id="password"
            name="password"
            type="password"
            value="newPassword"
          />
        </div>
      </div>
      <div
        class="mt-6 text-center"
      >
        <button
          class="bg-sky-500 hover:bg-sky-700 px-5 py-2.5 text-sm leading-5 font-semibold rounded-md text-white"
          data-testid="submit"
          type="submit"
        >
          Login
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Login should redirect if already logged in 1`] = `
<DocumentFragment>
  <div>
    Dashboard
  </div>
</DocumentFragment>
`;

exports[`Login should render Login component with default values 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="font-bold mt-9 text-3xl  text-center"
      data-testid="login-heading"
    >
      Login
    </h1>
    <form>
      <div>
        <label
          class="text-sm font-medium block text-slate-700"
          for="username"
        >
          Username
        </label>
        <div
          class="mt-1"
        >
          <input
            class="px-3 py-2 border bg-white shadow-sm border-slate-300 placeholder-slate-400 
 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 
 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1
 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
            data-testid="username"
            id="username"
            name="username"
            type="text"
            value="sarahedo"
          />
        </div>
      </div>
      <div
        class="mt-6"
      >
        <label
          class="text-sm font-medium block text-slate-700"
          for="password"
        >
          Password
        </label>
        <div
          class="mt-1"
        >
          <input
            class="px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400
 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 
 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1 
 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
            data-testid="password"
            id="password"
            name="password"
            type="password"
            value="password123"
          />
        </div>
      </div>
      <div
        class="mt-6 text-center"
      >
        <button
          class="bg-sky-500 hover:bg-sky-700 px-5 py-2.5 text-sm leading-5 font-semibold rounded-md text-white"
          data-testid="submit"
          type="submit"
        >
          Login
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
